Add new CSV test results, refactor PDF model and service classes, and update application properties