@@ -7,9 +7,11 @@ import java.util.stream.Collectors;
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.Assert;
 
+import com.Orio.wither_project.pdf.exception.PDFProcessingException;
 import com.Orio.wither_project.pdf.model.ChapterModel;
 import com.Orio.wither_project.pdf.model.DocumentModel;
 import com.Orio.wither_project.pdf.model.PageModel;
@@ -18,7 +20,7 @@ import com.Orio.wither_project.pdf.service.conversion.IPDFConversionService;
 import com.Orio.wither_project.pdf.service.extraction.IPDFContentExtractionService;
 import com.Orio.wither_project.pdf.service.extraction.IPDFMetaDataExtractionService;
 import com.Orio.wither_project.pdf.service.orchestration.IPDFProcessingOrchestrationService;
-import com.Orio.wither_project.pdf.service.save.ISQLDocumentService;
+import com.Orio.wither_project.pdf.service.storage.ISQLDocumentService;
 import com.Orio.wither_project.pdf.summary.model.BookSummaryModel;
 import com.Orio.wither_project.pdf.summary.model.ChapterSummaryModel;
 import com.Orio.wither_project.pdf.summary.model.PageSummaryModel;
@@ -32,91 +34,129 @@ public class BasicPDFProcessingOrchestrationService implements IPDFProcessingOrc
 
     private static final Logger logger = LoggerFactory.getLogger(BasicPDFProcessingOrchestrationService.class);
 
-    @Autowired
     private final ISQLDocumentService pdfSavingService;
-    @Autowired
     private final IPDFMetaDataExtractionService metaDataExtractionService;
-    @Autowired
     private final IPDFSummaryGenerationService summaryGenerationService;
-    @Autowired
     private final IPDFContentExtractionService contentExtractionService;
-    @Autowired
     private final IPDFConversionService conversionService;
 
     @Override
-    public DocumentModel convert(FileEntity file) throws IOException {
+    public DocumentModel convert(FileEntity file) throws PDFProcessingException {
+        Assert.notNull(file, "File entity cannot be null");
         logger.info("Starting PDF conversion for file: {}", file.getName());
-        PDDocument doc = conversionService.convertToPdDocument(file);
-        DocumentModel docModel = new DocumentModel();
 
-        List<ChapterModel> chapters = contentExtractionService.getChapters(doc);
-        docModel.setChapters(chapters);
+        try (PDDocument doc = conversionService.convertToPdDocument(file)) {
+            DocumentModel docModel = new DocumentModel();
+            List<ChapterModel> chapters = contentExtractionService.getChapters(doc);
+            docModel.setChapters(chapters);
 
-        String author = metaDataExtractionService.getAuthor(doc);
-        String title = metaDataExtractionService.getTitle(doc);
-        String fileName = metaDataExtractionService.getFileName(doc);
-        docModel.setAuthor(author);
-        docModel.setTitle(title);
-        docModel.setFileName(fileName);
+            for (ChapterModel chapterModel : chapters) {
+                chapterModel.setDoc(docModel);
+            }
 
-        doc.close();
-        logger.info("PDF conversion completed for file: {}", file.getName());
-        return docModel;
+            docModel.setAuthor(metaDataExtractionService.getAuthor(doc)); // TODO Remove that and put that into
+                                                                          // setMetadata method
+            docModel.setTitle(metaDataExtractionService.getTitle(doc));
+            docModel.setFileName(metaDataExtractionService.getFileName(doc));
+
+            logger.info("PDF conversion completed for file: {}", file.getName());
+            return docModel;
+        } catch (IOException e) {
+            throw new PDFProcessingException("Failed to process PDF file: " + file.getName(), e);
+        }
     }
 
     @Override
     public boolean setMetadata(DocumentModel model) {
+        Assert.notNull(model, "Document model cannot be null");
+        Assert.hasText(model.getFileName(), "File name cannot be empty");
         logger.info("Setting metadata for document: {}", model.getFileName());
         return true;
     }
 
     @Override
+    @Transactional
     public boolean setContents(DocumentModel model) {
-        try {
-            logger.info("Setting contents for document: {}", model.getFileName());
-            List<ChapterModel> chapters = model.getChapters();
-            List<PageModel> pages = chapters.stream()
-                    .flatMap(chapter -> chapter.getPages().stream())
-                    .toList();
+        Assert.notNull(model, "Document model cannot be null");
+        Assert.notNull(model.getChapters(), "Chapters cannot be null");
 
-            pdfSavingService.savePages(pages);
-            pdfSavingService.saveChapters(chapters);
+        logger.info("Setting contents for document: {}", model.getFileName());
+        try {
+            // pdfSavingService.saveDoc(model);
+
+            List<ChapterModel> chapters = model.getChapters();
+            chapters.forEach(chapter -> chapter.setDoc(model));
+            // pdfSavingService.saveChapters(chapters);
+
+            // List<PageModel> pages = extractPages(chapters);
+            // pdfSavingService.savePages(pages);
+
             logger.info("Contents set successfully for document: {}", model.getFileName());
             return true;
         } catch (Exception e) {
             logger.error("Error setting contents for document: {}", model.getFileName(), e);
-            return false;
+            throw new PDFProcessingException("Failed to set contents", e);
         }
     }
 
     @Override
+    @Transactional
     public boolean setSummaries(DocumentModel model) {
+        Assert.notNull(model, "Document model cannot be null");
+        Assert.notNull(model.getChapters(), "Chapters cannot be null");
+
+        logger.info("Setting summaries for document: {}", model.getFileName());
         try {
-            logger.info("Setting summaries for document: {}", model.getFileName());
+            // pdfSavingService.saveDoc(model);
+
             List<ChapterModel> chapters = model.getChapters();
+            if (chapters == null || chapters.isEmpty()) {
+                throw new PDFProcessingException("No chapters found for document");
+            }
+
+            chapters.forEach(chapter -> chapter.setDoc(model));
+            // pdfSavingService.saveChapters(chapters);
+
             generateAndSavePageSummaries(chapters);
             generateAndSaveChapterSummaries(chapters);
             generateAndSaveBookSummary(model, chapters);
+
+            pdfSavingService.saveDoc(model);
+
             logger.info("Summaries set successfully for document: {}", model.getFileName());
             return true;
         } catch (Exception e) {
             logger.error("Error setting summaries for document: {}", model.getFileName(), e);
-            return false;
+            throw new PDFProcessingException("Failed to set summaries", e);
         }
     }
 
-    private void generateAndSavePageSummaries(List<ChapterModel> chapters) {
-        logger.info("Generating and saving page summaries");
-        List<PageModel> pages = chapters.stream().flatMap(chapter -> chapter.getPages().stream()).toList();
+    private List<PageModel> extractPages(List<ChapterModel> chapters) {
+        return chapters.stream()
+                .flatMap(chapter -> chapter.getPages().stream())
+                .collect(Collectors.toList());
+    }
+
+    private void generateAndSavePageSummaries(List<ChapterModel> chapters) { // TODO Add pages summarized progress
+        logger.debug("Generating and saving page summaries");
+        List<PageModel> pages = extractPages(chapters);
+
         pages.forEach(page -> {
-            String pageSummary = summaryGenerationService.summarizePage(page.getContent());
+            String pageContent = page.getContent();
+            if (pageContent == null || pageContent.trim().isEmpty()) {
+                logger.warn("Empty page content found in document. Setting default content.");
+                pageContent = "No content available";
+                page.setContent(pageContent);
+            }
+
+            String pageSummary = summaryGenerationService.summarizePage(pageContent);
             PageSummaryModel pageSummaryModel = new PageSummaryModel(pageSummary);
             pageSummaryModel.setPage(page);
             page.setSummary(pageSummaryModel);
         });
 
-        pdfSavingService.savePages(pages);
-        logger.info("Page summaries generated and saved successfully");
+        // pdfSavingService.savePages(pages);
+        logger.debug("Page summaries generated and saved successfully");
     }
 
     private void generateAndSaveChapterSummaries(List<ChapterModel> chapters) {
@@ -125,14 +165,14 @@ public class BasicPDFProcessingOrchestrationService implements IPDFProcessingOrc
             String pageSummaries = chapter.getPages().stream()
                     .map(PageModel::getSummary)
                     .map(PageSummaryModel::getContent)
-                    .collect(Collectors.joining("\n"));
+                    .collect(Collectors.joining("\n\n\n\n"));
             String chapterSummary = summaryGenerationService.summarizeChapter(pageSummaries);
             ChapterSummaryModel chapterSummaryModel = new ChapterSummaryModel(chapterSummary);
             chapterSummaryModel.setChapter(chapter);
             chapter.setSummary(chapterSummaryModel);
         });
 
-        pdfSavingService.saveChapters(chapters);
+        // pdfSavingService.saveChapters(chapters);
         logger.info("Chapter summaries generated and saved successfully");
     }
 
@@ -145,8 +185,9 @@ public class BasicPDFProcessingOrchestrationService implements IPDFProcessingOrc
         String bookSummary = summaryGenerationService.summarizeDocument(chapterSummaries);
         BookSummaryModel bookSummaryModel = new BookSummaryModel(bookSummary);
         model.setSummary(bookSummaryModel);
+        bookSummaryModel.setBook(model);
 
-        pdfSavingService.saveDoc(model);
+        // pdfSavingService.saveDoc(model);
         logger.info("Book summary generated and saved successfully for document: {}", model.getFileName());
     }
 }
